[package]
name = "dart-frog"
version = "0.1.0"
authors = ["Christopher O'Brian <mobiletread@gmail.com>"]

[dependencies]
clap = {version = "2.32.0",features = ["yaml"]}
indicatif = "0.9.0"
yaml-rust = "0.4.0"
serde_yaml = "0.7.5"
serde = "1.0.66"
serde_derive = "1.0.70"
serde_json = "1.0.22"
unindent = "0.1.3"
colored = "1.6"
regex = "1"
